# parcel-chatbot

./: LICENSE
parcel-main/: README.md  pyproject.toml
parcel-main/src/parcel/: chainlit_app.py
parcel-main/src/parcel/config/: agents.yaml  tasks.yaml
parcel-main/src/parcel/flows/: parcel_flow.py
