[project]
name = "parcel"
version = "0.1.0"
description = "parcel using crewAI"
authors = [{ name = "Babar Masood", email = "babaronline.com@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chainlit>=2.2.1",
    "crewai[tools]>=0.102.0,<1.0.0",
    "litellm>=1.60.2",
]

[project.scripts]
kickoff = "parcel.flows.parcel_flow:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parcel"]

[tool.crewai]
type = "flow"
